# panoramic-imaging-system

./: .gitignore  README.md  app.py  database.py  panaromic_code.ino  panoptic.db  params.npz  requirements.txt  stitch.py  sync.py
CameraWebServer/: CameraWebServer.ino  app_httpd.h
mjpeg_test/: CMakeLists.txt  ICapture.hpp  MJPEGCapture.cc  MJPEGCapture.hpp  README.md  detailed_mjpeg_stitching.py  gl.h  http_fetch.hpp  pyproject.toml  python_bindings.cc  setup.py  st.cc  stesp32.cc  test.cc  video_stitcher.cc  video_stitcher.hpp
